--- a/buildspec-deploy.yml
+++ b/buildspec-deploy.yml
@@ -16,7 +16,7 @@ phases:
     commands:
       - echo "Deploying to EKS cluster"
       - kubectl apply -f https://raw.githubusercontent.com/awsterraworkshop/case6-buildfiles/refs/heads/main/k8s/deployment.yaml
-      # - kubectl set image deployment/webapp app=619512840514.dkr.ecr.us-east-1.amazonaws.com/case6-ecr:latest
+      - kubectl set image deployment/webapp app=777669575376.dkr.ecr.us-east-1.amazonaws.com/case6-ecr:latest
   post_build:
     commands:
       - echo "Deployment completed"
